[package]
name = "systemd-omfld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[[bin]]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "systemd_ctld"
path = "src/dist/systemd_ctld.rs"

[[bin]]
name = "systemd_oomd"
path = "src/dist/systemd_oomd.rs"

[dependencies]
anyhow = "1.0.70"
arbitrary = { version = "1.3.0", features = ["derive"] }
futures = { version = "0.3", default-features = false }
libc = "0.2.141"
libfuzzer-sys = "0.4.6"
serde = { version = "1.0.132", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = true}
